Changed the look and feel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Blog title</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/site.css">
+    <link rel="stylesheet" href="/styles/site-article.css">
     <link rel="stylesheet" href="/lib/third-party/prismjs/styles/prism.css">
     <script src="/lib/third-party/showdown/showdown.min.js"></script>
     <script src="/lib/third-party/prismjs/prism.js" data-manual></script>
@@ -14,7 +15,7 @@
       <nav id="menu">
         <div class="header">
           <h1>Blog Title</h1>
-          <a class="menu-toggle" href="#">&#11206;</a>
+          <a href="#" class="menu-toggle"><span class="desc">Menu</span><span class="indicator">&#11206;</span></a>
         </div>
         <section>
           <h2>Articles</h2>
@@ -29,7 +30,7 @@
       </nav>
       <main>
         <article></article>
-        <footer><p>v0.0.1 - All content on this site is copyright &copy; Your Name 2024</p></footer>
+        <footer><p>All content on this site is copyright &copy; Your Name 2024</p></footer>
       </main>
     </div>
   </body>
