Improvements loading articles and added abstraction

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Blog title</title>
     <link rel="stylesheet" href="/styles/site.css">
     <link rel="stylesheet" href="/styles/site-article.css">
-    <link rel="stylesheet" href="/lib/third-party/prismjs/styles/prism.css">
-    <script src="/lib/third-party/showdown/showdown.min.js"></script>
-    <script src="/lib/third-party/prismjs/prism.js" data-manual></script>
-    <script src="/lib/init.js" type="module"></script>
+    <link rel="stylesheet" href="/libs/third-party/prismjs/styles/prism.css">
+    <script src="/libs/third-party/showdown/showdown.min.js"></script>
+    <script src="/libs/third-party/prismjs/prism.js" data-manual></script>
+    <script src="/libs/init.js" type="module"></script>
   </head>
   <body>
     <div class="site-wrapper">
