--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="/libs/third-party/prismjs/styles/prism.css">
     <script src="/libs/third-party/showdown/showdown.min.js"></script>
     <script src="/libs/third-party/prismjs/prism.js" data-manual></script>
+    <script src="/libs/site/menu-component/menu-component.js" type="module"></script>
     <script src="/libs/init.js" type="module"></script>
   </head>
   <body>
     <div class="site-wrapper">
-      <nav id="menu">
+      <div class="side-bar">
         <div class="header">
           <h1>Blog Title</h1>
           <a href="#" class="menu-toggle"><span class="desc">Menu</span><span class="indicator">&#11206;</span></a>
         </div>
         <section>
           <h2>Articles</h2>
-          <ul class="menu-items"></ul>
+          <nav-menu></nav-menu>
         </section>
         <section>
           <h2>Contact</h2>
@@ -27,7 +28,7 @@
             <li>E-mail: <a href="mailto: info@yoursite.com">info@yoursite.com</a></li>
           </ul>
         </section>
-      </nav>
+      </div>
       <main>
         <article></article>
         <footer><p>All content on this site is copyright &copy; Your Name 2024</p></footer>
