--- a/index.html
+++ b/index.html
@@ -8,31 +8,32 @@
     <link rel="stylesheet" href="/libs/third-party/prismjs/styles/prism.css">
     <script src="/libs/third-party/showdown/showdown.min.js"></script>
     <script src="/libs/third-party/prismjs/prism.js" data-manual></script>
-    <script src="/libs/site/menu-component/menu-component.js" type="module"></script>
-    <script src="/libs/init.js" type="module"></script>
+    <script src="/libs/blog/init.js" type="module"></script>
   </head>
   <body>
-    <div class="site-wrapper">
-      <div class="side-bar">
-        <div class="header">
-          <h1>Blog Title</h1>
-          <a href="#" class="menu-toggle"><span class="desc">Menu</span><span class="indicator">&#11206;</span></a>
+    <div class="site">
+      <div class="site-wrapper">
+        <div class="side-bar" id="side-bar">
+          <div class="header">
+            <h1>Rocking Gnome</h1>
+            <a href="#" class="toggle"><span class="desc">Menu</span><span class="indicator">&#11206;</span></a>
+          </div>
+          <section>
+            <h2>Articles</h2>
+            <nav></nav>
+          </section>
+          <section>
+            <h2>Contact</h2>
+            <ul>
+              <li>E-mail: <a href="mailto: info@yoursite.com">info@yoursite.com</a></li>
+            </ul>
+          </section>
         </div>
-        <section>
-          <h2>Articles</h2>
-          <nav-menu></nav-menu>
-        </section>
-        <section>
-          <h2>Contact</h2>
-          <ul>
-            <li>E-mail: <a href="mailto: info@yoursite.com">info@yoursite.com</a></li>
-          </ul>
-        </section>
+        <main>
+          <article></article>
+          <footer><p>All content on this site is copyright &copy; Your Name 2024</p></footer>
+        </main>
       </div>
-      <main>
-        <article></article>
-        <footer><p>All content on this site is copyright &copy; Your Name 2024</p></footer>
-      </main>
     </div>
   </body>
 </html>
