New welcome message and changed blog name.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,17 @@
       <div class="site-wrapper">
         <div class="side-bar" id="side-bar">
           <div class="header">
-            <h1>Rocking Gnome</h1>
+            <h1>My Notes</h1>
             <a href="#" class="toggle"><span class="desc">Menu</span><span class="indicator">&#11206;</span></a>
           </div>
           <section>
             <h2>Articles</h2>
             <nav></nav>
           </section>
-          <section>
-            <h2>Contact</h2>
-            <ul>
-              <li>E-mail: <a href="mailto: info@yoursite.com">info@yoursite.com</a></li>
-            </ul>
-          </section>
         </div>
         <main>
           <article></article>
-          <footer><p>All content on this site is copyright &copy; Your Name 2024</p></footer>
+          <footer><p>All content on this site is copyright &copy; Nino Camdzic 2024</p></footer>
         </main>
       </div>
     </div>
