--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en:Us">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Blog title</title>
+    <title>Nino Camdzic - My Blog</title>
     <link rel="stylesheet" href="/styles/site.css">
     <link rel="stylesheet" href="/styles/site-article.css">
     <link rel="stylesheet" href="/libs/third-party/prismjs/styles/prism.css">
@@ -15,7 +15,7 @@
       <div class="site-wrapper">
         <div class="side-bar" id="side-bar">
           <div class="header">
-            <h1>My Notes</h1>
+            <h1>My Blog</h1>
             <a href="#" class="toggle"><span class="desc">Menu</span><span class="indicator">&#11206;</span></a>
           </div>
           <section>
