--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Nino Camdzic - My Blog</title>
-    <link rel="stylesheet" href="/styles/site.css">
-    <link rel="stylesheet" href="/styles/site-article.css">
-    <link rel="stylesheet" href="/libs/third-party/prismjs/styles/prism.css">
-    <script src="/libs/third-party/showdown/showdown.min.js"></script>
-    <script src="/libs/third-party/prismjs/prism.js" data-manual></script>
-    <script src="/libs/blog/init.js" type="module"></script>
+    <link rel="stylesheet" href="./styles/site.css">
+    <link rel="stylesheet" href="./styles/site-article.css">
+    <link rel="stylesheet" href="./libs/third-party/prismjs/styles/prism.css">
+    <script src="./libs/third-party/showdown/showdown.min.js"></script>
+    <script src="./libs/third-party/prismjs/prism.js" data-manual></script>
+    <script src="./libs/blog/init.js" type="module"></script>
   </head>
   <body>
     <div class="site">
