Added loader and moved the fonts folder.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en:Us">
+<html lang="en-US">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Nino Camdzic - My Blog</title>
@@ -18,12 +18,14 @@
             <h1>My Blog</h1>
             <a href="#" class="toggle"><span class="desc">Menu</span><span class="indicator">&#11206;</span></a>
           </div>
-          <section>
+          <section class="articles">
             <h2>Articles</h2>
+            <p class="nav-loader"><span class="loader"></span></p>
             <nav></nav>
           </section>
         </div>
         <main>
+          <p class="page-loader"><span class="loader"></span></p>
           <article></article>
           <footer><p>All content on this site is copyright &copy; Nino Camdzic 2024</p></footer>
         </main>
