added the adapter pattern

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main>
           <p class="page-loader"><span class="loader"></span></p>
           <article></article>
-          <footer><p>All content on this site is copyright &copy; Nino Camdzic 2024</p></footer>
+          <footer><p>All content on this site is copyright &copy; Nino Camdzic 2024 - 2025</p></footer>
         </main>
       </div>
     </div>
